# lang_app

./: .gitignore  AGENTS.md  README.md
backend/: pyproject.toml
backend/app/: config.py  crud.py  db.py  main.py  models.py
backend/app/agents/: document_rag.py  graph.py  rag.py  search.py  supervisor.py
backend/app/api/: routes.py
backend/app/ingestion/: document_processor.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.svelte
pricelists/: Diotec_pricelist.csv  NXP_pricelist.csv  STM_pricelist.csv
