[project]
name = "lang_app"
version = "0.1.0"
description = "Multi-agent learning project"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.3.0",
    "langchain-tavily>=0.2.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "python-multipart>=0.0.12",
    "langchain-chroma>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "pypdf>=5.0.0",
    "python-pptx>=1.0.0",
]
[dependency-groups]
dev = ["ruff"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.format]
quote-style = "double"
